compiler/testData/diagnostics/tests/inference/pcla/issues/kt50989.fir.kt
// RUN_PIPELINE_TILL: SOURCE
// WITH_STDLIB

fun main() {
    <!CANNOT_INFER_PARAMETER_TYPE, NEW_INFERENCE_NO_INFORMATION_FOR_PARAMETER!>buildList<!> {
        println(get(0))
    }
}
